--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -7,8 +6,19 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<main class="accio"  id="job">
+	<p class="hello-accio"> Hello Accio Job </p>
+	
+
+
+
+
+
+
+	
+</main>
+	
+	    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
